Refactoring in server handlers
In preparation to move handleRequest method up.

See gh-959