@@ -16,7 +16,6 @@
 
 package org.springframework.graphql.server.webflux;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.apache.commons.logging.Log;
@@ -25,6 +24,7 @@ import reactor.core.publisher.Mono;
 
 import org.springframework.graphql.server.WebGraphQlHandler;
 import org.springframework.graphql.server.WebGraphQlRequest;
+import org.springframework.graphql.server.WebGraphQlResponse;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.CodecConfigurer;
 import org.springframework.web.reactive.function.server.ServerRequest;
@@ -42,8 +42,8 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 	private static final Log logger = LogFactory.getLog(GraphQlHttpHandler.class);
 
 	@SuppressWarnings("removal")
-	private static final List<MediaType> SUPPORTED_MEDIA_TYPES =
-			Arrays.asList(MediaType.APPLICATION_GRAPHQL_RESPONSE, MediaType.APPLICATION_JSON, MediaType.APPLICATION_GRAPHQL);
+	private static final List<MediaType> SUPPORTED_MEDIA_TYPES = List.of(
+			MediaType.APPLICATION_GRAPHQL_RESPONSE, MediaType.APPLICATION_JSON, MediaType.APPLICATION_GRAPHQL);
 
 
 	/**
@@ -66,18 +66,18 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 
 	/**
 	 * Handle GraphQL requests over HTTP.
-	 * @param serverRequest the incoming HTTP request
+	 * @param request the incoming HTTP request
 	 * @return the HTTP response
 	 */
-	public Mono<ServerResponse> handleRequest(ServerRequest serverRequest) {
-		return readRequest(serverRequest)
+	public Mono<ServerResponse> handleRequest(ServerRequest request) {
+		return readRequest(request)
 				.flatMap((body) -> {
 					WebGraphQlRequest graphQlRequest = new WebGraphQlRequest(
-							serverRequest.uri(), serverRequest.headers().asHttpHeaders(),
-							serverRequest.cookies(), serverRequest.remoteAddress().orElse(null),
-							serverRequest.attributes(), body,
-							serverRequest.exchange().getRequest().getId(),
-							serverRequest.exchange().getLocaleContext().getLocale());
+							request.uri(), request.headers().asHttpHeaders(),
+							request.cookies(), request.remoteAddress().orElse(null),
+							request.attributes(), body,
+							request.exchange().getRequest().getId(),
+							request.exchange().getLocaleContext().getLocale());
 					if (logger.isDebugEnabled()) {
 						logger.debug("Executing: " + graphQlRequest);
 					}
@@ -85,18 +85,18 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 				})
 				.flatMap((response) -> {
 					if (logger.isDebugEnabled()) {
-						logger.debug("Execution complete");
+						logger.debug("Execution result ready");
 					}
-					ServerResponse.BodyBuilder builder = ServerResponse.ok();
-					builder.headers((headers) -> headers.putAll(response.getResponseHeaders()));
-					builder.contentType(selectResponseMediaType(serverRequest));
-					if (this.codecDelegate != null) {
-						return builder.bodyValue(this.codecDelegate.encode(response));
-					}
-					else {
-						return builder.bodyValue(response.toMap());
-					}
+					return prepareResponse(request, response);
 				});
+	}
+
+	protected Mono<ServerResponse> prepareResponse(ServerRequest serverRequest, WebGraphQlResponse response) {
+		ServerResponse.BodyBuilder builder = ServerResponse.ok();
+		builder.headers((headers) -> headers.putAll(response.getResponseHeaders()));
+		builder.contentType(selectResponseMediaType(serverRequest));
+		return builder.bodyValue((this.codecDelegate != null) ?
+				this.codecDelegate.encode(response) : response.toMap());
 	}
 
 	private static MediaType selectResponseMediaType(ServerRequest serverRequest) {
