@@ -16,18 +16,16 @@
 
 package org.springframework.graphql.server.webmvc;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.ExecutionException;
 
 import jakarta.servlet.ServletException;
 
 import org.springframework.context.i18n.LocaleContextHolder;
-import org.springframework.graphql.GraphQlResponse;
 import org.springframework.graphql.server.WebGraphQlHandler;
 import org.springframework.graphql.server.WebGraphQlRequest;
-import org.springframework.http.HttpMethod;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.HttpMessageConverter;
 import org.springframework.http.server.ServletServerHttpResponse;
@@ -47,8 +45,8 @@ import org.springframework.web.servlet.function.ServerResponse;
 public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 
 	@SuppressWarnings("removal")
-	private static final List<MediaType> SUPPORTED_MEDIA_TYPES =
-			Arrays.asList(MediaType.APPLICATION_GRAPHQL_RESPONSE, MediaType.APPLICATION_JSON, MediaType.APPLICATION_GRAPHQL);
+	private static final List<MediaType> SUPPORTED_MEDIA_TYPES = List.of(
+			MediaType.APPLICATION_GRAPHQL_RESPONSE, MediaType.APPLICATION_JSON, MediaType.APPLICATION_GRAPHQL);
 
 
 	/**
@@ -62,27 +60,28 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 	/**
 	 * Create a new instance with a custom message converter.
 	 * <p>If no converter is provided, this will use
-	 * {@link org.springframework.web.servlet.config.annotation.WebMvcConfigurer#configureMessageConverters(List) the one configured in the web framework}.
+	 * {@link org.springframework.web.servlet.config.annotation.WebMvcConfigurer#configureMessageConverters(List)
+	 * the one configured in the web framework}.
 	 * @param graphQlHandler common handler for GraphQL over HTTP requests
-	 * @param messageConverter custom {@link HttpMessageConverter} to be used for encoding and decoding GraphQL payloads
+	 * @param converter custom {@link HttpMessageConverter} to read and write GraphQL payloads
 	 */
-	public GraphQlHttpHandler(WebGraphQlHandler graphQlHandler, @Nullable HttpMessageConverter<?> messageConverter) {
-		super(graphQlHandler, messageConverter);
+	public GraphQlHttpHandler(WebGraphQlHandler graphQlHandler, @Nullable HttpMessageConverter<?> converter) {
+		super(graphQlHandler, converter);
 	}
 
 	/**
 	 * Handle GraphQL requests over HTTP.
-	 * @param serverRequest the incoming HTTP request
+	 * @param request the incoming HTTP request
 	 * @return the HTTP response
 	 * @throws ServletException may be raised when reading the request body, e.g.
 	 * {@link HttpMediaTypeNotSupportedException}.
 	 */
-	public ServerResponse handleRequest(ServerRequest serverRequest) throws ServletException {
+	public ServerResponse handleRequest(ServerRequest request) throws ServletException {
 
 		WebGraphQlRequest graphQlRequest = new WebGraphQlRequest(
-				serverRequest.uri(), serverRequest.headers().asHttpHeaders(), initCookies(serverRequest),
-				serverRequest.remoteAddress().orElse(null),
-				serverRequest.attributes(), readBody(serverRequest), this.idGenerator.generateId().toString(),
+				request.uri(), request.headers().asHttpHeaders(), initCookies(request),
+				request.remoteAddress().orElse(null),
+				request.attributes(), readBody(request), this.idGenerator.generateId().toString(),
 				LocaleContextHolder.getLocale());
 
 		if (logger.isDebugEnabled()) {
@@ -94,13 +93,13 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 					if (logger.isDebugEnabled()) {
 						logger.debug("Execution complete");
 					}
-					MediaType contentType = selectResponseMediaType(serverRequest);
+					MediaType contentType = selectResponseMediaType(request);
 					ServerResponse.BodyBuilder builder = ServerResponse.ok();
 					builder.headers((headers) -> headers.putAll(response.getResponseHeaders()));
 					builder.contentType(contentType);
 
 					if (this.messageConverter != null) {
-						return builder.build(writeFunction(contentType, response));
+						return builder.build(writeFunction(this.messageConverter, contentType, response.toMap()));
 					}
 					else {
 						return builder.body(response.toMap());
@@ -132,16 +131,13 @@ public class GraphQlHttpHandler extends AbstractGraphQlHttpHandler {
 		return MediaType.APPLICATION_JSON;
 	}
 
-	private ServerResponse.HeadersBuilder.WriteFunction writeFunction(MediaType contentType, GraphQlResponse response) {
+	private static ServerResponse.HeadersBuilder.WriteFunction writeFunction(
+			HttpMessageConverter<Object> converter, MediaType contentType, Map<String, Object> resultMap) {
+
 		return (servletRequest, servletResponse) -> {
-			if (messageConverter != null) {
-				ServletServerHttpResponse httpResponse = new ServletServerHttpResponse(servletResponse);
-				messageConverter.write(response.toMap(), contentType, httpResponse);
-				return null;
-			}
-			else {
-				throw new HttpMediaTypeNotSupportedException(contentType, SUPPORTED_MEDIA_TYPES, HttpMethod.POST);
-			}
+			ServletServerHttpResponse httpResponse = new ServletServerHttpResponse(servletResponse);
+			converter.write(resultMap, contentType, httpResponse);
+			return null;
 		};
 	}
 
